<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/instructions_dialog"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="2dp">
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:text="@string/solo_new_board_directions"
              />
    <Button android:id="@+id/instructions_ok_button"
   	  	    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
   		    android:text="@string/ok"
   			/>
    <CheckBox android:id="@+id/show_instructions_again"
        	  android:layout_width="fill_parent"
        	  android:layout_height="wrap_content"
        	  android:paddingLeft="45dp"
        	  android:text="@string/do_not_show_again"></CheckBox>
</LinearLayout>