<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  				android:orientation="vertical"
  				android:layout_width="fill_parent"
  				android:layout_height="fill_parent">
  	<TextView android:id="@+id/board_name_text"
  	    	  android:layout_width="wrap_content"
 			  android:layout_height="wrap_content"
  	          android:text="@string/name"
  	          android:layout_centerHorizontal="true">
  	</TextView>
  	<Button android:id="@+id/close_edit_board"
  			android:background="@drawable/presence_offline"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:padding="4dp"
 			android:layout_alignParentRight="true"></Button>
	<RelativeLayout android:layout_height="wrap_content" 
				  android:layout_width="fill_parent"
				  android:orientation="vertical" 
				  android:paddingTop="10dp" 
				  android:paddingBottom="10dp"
				  android:layout_below="@id/close_edit_board"		  
				  android:layout_alignParentLeft="true">
	   	<Button android:text="@string/edit"
	   			android:drawableLeft="@android:drawable/ic_menu_edit"
	   			android:drawablePadding="3sp"
	   			android:gravity="left|center_vertical"
	   			android:id="@+id/edit_board_button"
	   			android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	   			android:layout_marginBottom="8dp"
	   			android:layout_marginLeft="6dp"
	   			android:layout_marginRight="6dp"	   			
	   			android:layout_centerHorizontal="true"></Button>
	   	<Button android:text="@string/delete"
	   			android:drawableLeft="@android:drawable/ic_menu_delete"
	   			android:drawablePadding="3sp"
	   			android:gravity="left|center_vertical"
	   			android:id="@+id/delete_board_button"
	   			android:layout_below="@id/edit_board_button"
	   			android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	   			android:layout_marginBottom="4dp"
	   			android:layout_marginLeft="6dp"
	   			android:layout_marginRight="6dp"	   			
	   			android:layout_centerHorizontal="true"></Button>
	 	<RelativeLayout android:id="@+id/delete_confirm_toolbar"
	 				    android:layout_below="@id/delete_board_button"
	  			  	    android:layout_width="wrap_content"
	  			  	    android:layout_height="wrap_content"
	  			  	    android:layout_centerHorizontal="true"
	  			  	    android:layout_marginBottom="8dp"
	  			  	    android:layout_marginTop="4dp"
					    android:visibility="gone">
		  	<TextView android:id="@+id/delete_confirm_message"
		  	          android:layout_width="wrap_content"
		 			  android:layout_height="wrap_content"
		 			  android:layout_centerHorizontal="true"
		  	          android:text="@string/delete_confirmation"></TextView>
		 	<LinearLayout android:orientation="horizontal"
		 	              android:layout_below="@id/delete_confirm_message"
		 	              android:layout_centerHorizontal="true"
		 	              android:layout_marginTop="4dp"
		  			  	  android:layout_width="wrap_content"
		  			  	  android:layout_height="wrap_content">	  	
		 		<Button android:id="@+id/delete_board_ok_button"
		 				android:text="@string/ok"
		 				android:paddingRight="20dp"
		 				android:layout_width="wrap_content"
		  			  	android:layout_height="wrap_content"></Button>
		 		<Button android:id="@+id/delete_board_cancel_button"
		 				android:text="@string/cancel"
		 				android:layout_width="wrap_content"
		  			  	android:layout_height="wrap_content"></Button>
		 	</LinearLayout>			
	 	</RelativeLayout>		   	
	   	<Button android:text="@string/rename"
	   			android:drawableLeft="@android:drawable/ic_menu_revert"
	   			android:drawablePadding="3sp"
	   			android:gravity="left|center_vertical"
	   			android:id="@+id/rename_board_button"
	   			android:layout_below="@id/delete_confirm_toolbar"
	   			android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	   			android:layout_marginBottom="4dp"
	   			android:layout_marginLeft="6dp"
	   			android:layout_marginRight="6dp"
	   			android:layout_centerHorizontal="true"></Button>
	 	<RelativeLayout android:id="@+id/rename_toolbar"
	 				    android:layout_below="@id/rename_board_button"
	  			  	    android:layout_width="wrap_content"
	  			  	    android:layout_height="wrap_content"
	  			  	    android:layout_centerHorizontal="true"
	  			  	    android:layout_marginBottom="8dp"
	  			  	    android:layout_marginTop="4dp"
					    android:visibility="gone">
		 	<EditText android:id="@+id/board_new_name"
		  	          android:layout_width="fill_parent"
		 			  android:layout_height="wrap_content"
		 			  android:layout_centerHorizontal="true"
	   				  android:layout_marginLeft="6dp"
	   			      android:layout_marginRight="6dp"		 			  
		  	          android:text=""
		  	          android:inputType="text">
		 	</EditText>
		 	<LinearLayout android:id="@+id/rename_buttons_layout"
		 	    		  android:orientation="horizontal"
		 	              android:layout_below="@id/board_new_name"
		 	              android:layout_centerHorizontal="true"
		 	              android:layout_marginTop="4dp"
		  			  	  android:layout_width="wrap_content"
		  			  	  android:layout_height="wrap_content">	  	
		 		<Button android:id="@+id/rename_board_ok_button"
		 				android:text="@string/ok"
		 				android:paddingRight="20dp"
		 				android:layout_width="wrap_content"
		  			  	android:layout_height="wrap_content"></Button>
		 		<Button android:id="@+id/rename_board_cancel_button"
		 				android:text="@string/cancel"
		 				android:layout_width="wrap_content"
		  			  	android:layout_height="wrap_content"></Button>
		 	</LinearLayout>
		  	<TextView android:id="@+id/new_name_exists_message"
		  	    	  android:layout_below="@id/rename_buttons_layout"
		  	          android:layout_width="wrap_content"
		 			  android:layout_height="wrap_content"
		 			  android:layout_centerHorizontal="true"
		 			  android:textColor="#FF0000"
		 			  android:visibility="gone"
		  	          android:text="@string/name_already_in_use"></TextView>		 	
	 	</RelativeLayout>	   	
	</RelativeLayout>
</RelativeLayout>
