<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  			  android:layout_width="fill_parent"
  			  android:layout_height="fill_parent"
  			  android:orientation="vertical">
	<View android:background="@drawable/scores_border"
    	  android:layout_width="fill_parent"
    	  android:layout_height="1dp" />
	<TextView android:id="@+id/score_game_type"
			  android:layout_gravity="center"
			  android:gravity="center"
			  android:text="@string/puzzle_type"
			  android:textColor="#160066"
			  android:layout_height="wrap_content"
			  android:layout_width="fill_parent"
			  android:padding="2dp"
			  style="@style/Title"></TextView>
	<View android:background="@drawable/scores_border"
    	  android:layout_width="fill_parent"
    	  android:layout_height="1dp" />
	<TableLayout android:layout_width="fill_parent"
				 android:layout_height="fill_parent"
				 android:layout_gravity="center">
		<TableRow android:id="@+id/score_1_row">
		    <TextView android:text="@string/first_label"
		        	  android:textColor="#160066"
		        	  android:gravity="right"
		        	  android:layout_weight="0.25"
		        	  android:layout_marginRight="10dp"
					  style="@style/ListItem"/>
			<TextView android:id="@+id/score_1"
					  android:text="@string/puzzle_type"
					  android:textColor="#160066"
					  android:gravity="left"
					  android:layout_weight="0.5"
					  style="@style/ListItem" />
		    <TextView android:id="@+id/score_1_time"
		        	  android:textColor="#160066"
		        	  android:gravity="left"
		        	  android:layout_weight="0.25"
					  style="@style/ListItem"/>		
		</TableRow>
		<TableRow android:id="@+id/score_2_row">
		    <TextView android:text="@string/second_label"
		        	  android:textColor="#160066"
		        	  android:gravity="right"
		        	  android:layout_weight="0.25"
		        	  android:layout_marginRight="10dp"
					  style="@style/ListItem"/>	    
			<TextView android:id="@+id/score_2"
					  android:text="@string/puzzle_type"
					  android:textColor="#160066"
					  android:gravity="left"
					  android:layout_weight="0.5"
					  style="@style/ListItem" />
		    <TextView android:id="@+id/score_2_time"
		        	  android:textColor="#160066"
		        	  android:gravity="left"
		        	  android:layout_weight="0.25"
					  style="@style/ListItem"/>			
		</TableRow>
		<TableRow android:id="@+id/score_3_row">
		    <TextView android:text="@string/third_label"
		        	  android:textColor="#160066"
		        	  android:gravity="right"
		        	  android:layout_weight="0.25"
		        	  android:layout_marginRight="10dp"
					  style="@style/ListItem"/>	    
			<TextView android:id="@+id/score_3"
					  android:text="@string/puzzle_type"
					  android:textColor="#160066"
					  android:gravity="left"
					  android:layout_weight="0.5"
					  style="@style/ListItem" />
		    <TextView android:id="@+id/score_3_time"
		        	  android:textColor="#160066"
		        	  android:gravity="left"
		        	  android:layout_weight="0.25"
					  style="@style/ListItem"/>	
		</TableRow>
	</TableLayout>	
</LinearLayout>
